@@ -1,4 +1,5 @@
 - Refactor: Implement treasury service method to check if dynamic message is defined [#qubIT-Fenix-7405]
+- Bug Fix: Correct order between academic debt rules between the same type, financial entity and execution year [#qubIT-Fenix-5440]
 
 12.9.6 (04-08-2025)
 - Refactor: Implement method to retrieve personal email from person customer [#qubIT-Fenix-7385]
